@@ -74,13 +74,6 @@ are known, eg filtering.
 </todoitem>
 <todoitem priority="M" difficulty="3" owner="" area="API" release="1.0">
 
-Return more information about number of documents in database which match
-query. Perhaps an estimate based on the termfreqs of the terms in the query
-(and overridden by docs_considered if docs_considered is greater).
-
-</todoitem>
-<todoitem priority="M" difficulty="3" owner="" area="API" release="1.0">
-
 Make the use of iterators consistent when supplying a set of things to the API:
 currently, sometimes you have to supply a begin and end iterator, and sometimes
 you have to supply a reference to an object.  Always use begin and end
