@@ -1,3 +1,9 @@
+Tue Dec  5 16:53:46 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Update todo.
+
+	* Fix undesirable assert in stats.h
+
 Tue Dec  5 15:41:40 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
         * Replace OmMSet::docs_considered with
